@@ -14,6 +14,8 @@
 
         * Autoconf insists that AC_INIT be the very first thing.
 
+        * Added virtual "assign" method on FieldValue.
+
 2002-01-28  S. K. Bose  <bose@pavan.barc.ernet.in>
 
         * In "NodeLOD", accumulated modelview matrix within 
